--- a/system_huellitas/resources/css/admin/scrud_marcas.css
+++ b/system_huellitas/resources/css/admin/scrud_marcas.css
@@ -1,31 +1,37 @@
+/* Establece un margen derecho personalizado */
 .custom-margin-right {
     margin-right: 8px;
 }
 
+/* Establece el tamaño de la imagen */
 .tamanio_imagen{
     width: 40px;
     left: auto;
 }
 
+/* Establece el tamaño de las imágenes en los botones */
 .tamanio_imagen_botones{
     width: 20px;
     left: auto;
 }
 
+/* Establece el tamaño de las imágenes en los botones de edición */
 .tamanio_edicion_botones{
     width: 30px;
     left: auto;
 }
 
+/* Configuración de la barra de búsqueda */
 .barra_busqueda{
     margin-left: 50px;
 }
 
+/* Estilo para el botón de búsqueda */
 .boton_busqueda{
     float: right;
 }
 
-
+/* Estilo para las celdas de encabezado de la tabla */
 th{
     --bs-table-color: var(--bs-light);
     background-image: linear-gradient(180deg, rgb(238, 150, 75), rgba(235, 195, 81, 1));
