--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -2,24 +2,31 @@
 <html lang="en">
 
 <head>
+    <!-- Configuración del documento -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huellitas Pets - Marcas</title>
-    <!-- Agregamos una imagen para que se vea en la ventana -->
+
+    <!-- Icono de la pestaña del navegador -->
     <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
-    <!-- Agregamos el framework de boostrap - css -->
+
+    <!-- Framework Bootstrap - CSS -->
     <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">
-    <!-- Agregamos su archivo css -->
+
+    <!-- Estilos propios -->
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/scrud_marcas.css">
-    <!-- Agregamos el archivo css del menu -->
+
+    <!-- Estilos del menú -->
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/static_components/menu.css">
+</head>
 
 <body>
-    <!-- Insertar nuestro navbar a esta pantalla usando js -->
-    <div id="navbar"></div>
-
+    <!-- Encabezado de la página -->
     <header class="container_one p-2S">
+        <!-- Navbar (será insertado mediante JS) -->
+        <div id="navbar"></div>
         <div class="container-fluid p-4 mt-5">
+            <!-- Encabezado con logo y título -->
             <div class="d-flex">
                 <img src="../../resources/img/svg/brand.svg" class="custom-margin-right" alt="">
                 <h2 class="mt-2"><strong>Marcas</strong></h2>
@@ -29,14 +36,19 @@
     </header>
 
     <main>
+        <!-- Barra de búsqueda -->
         <div class="row">
             <div class="col align-self-center">
                 <div class="col-10 barra_busqueda">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-4 shadow" type="search" placeholder="Buscar..." aria-label="Search">
+                    <form class="d-flex" id="buscar_marcas" role="search">
+                        <input class="form-control me-4 shadow" type="search" placeholder="Buscar..."
+                            aria-label="Search" name="busquedaMarcas" id="busqueda_marcas">
                         <div class="col-7">
-                            <button class="btn btn-red-color text-light boton_busqueda img-fluid" type="button" data-bs-toggle="modal" data-bs-target="#agmarc">
-                                <img src="../../resources/img/png/boton_agregar.png" class="custom-margin-right tamanio_imagen_botones" alt="">Buscar
+                            <!-- Botón para abrir el modal de agregar marca -->
+                            <button class="btn btn-red-color text-light boton_busqueda img-fluid" type="button"
+                                data-bs-toggle="modal" data-bs-target="#agmarc">
+                                <img src="../../resources/img/png/boton_agregar.png"
+                                    class="custom-margin-right tamanio_imagen_botones" alt="">Agregar Marca
                             </button>
                         </div>
                     </form>
@@ -44,9 +56,11 @@
             </div>
         </div>
 
+        <!-- Contenido principal: Tabla de marcas -->
         <div class="container p-4 mt-5">
             <table class="table">
                 <thead class="text-center">
+                    <!-- Encabezados de la tabla -->
                     <tr class="table-warning">
                         <th scope="col">Imagen</th>
                         <th scope="col">Nombre</th>
@@ -54,40 +68,43 @@
                     </tr>
                 </thead>
                 <tbody class="text-center">
+                    <!-- Datos de ejemplo en la tabla -->
                     <tr>
                         <td><img class="tamanio_imagen" src="../../resources/img/svg/dog.svg" alt=""></td>
                         <td>Otto</td>
                         <td>
-                            <button type="button" class="btn btn-danger img-fluid"><img
-                                    src="../../resources/img/png/eliminar_img_boton.png" class="tamanio_edicion_botones"
-                                    alt=""></button>
-                            <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal" data-bs-target="#agmarc"><img
-                                    src="../../resources/img/png/editar_boton.png"
-                                    class="tamanio_edicion_botones"></button>
+                            <!-- Botones de acciones (eliminar, editar) -->
+                            <button type="button" class="btn btn-light"><img
+                                    src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
+                            <button type="button" class="btn btn-light" data-bs-toggle="modal"
+                                data-bs-target="#agmarc"><img src="../../resources/img/svg/edit_icon.svg"
+                                    width="35px"></button>
                         </td>
                     </tr>
+                    <!-- Datos de ejemplo en la tabla -->
                     <tr>
                         <td><img class="tamanio_imagen" src="../../resources/img/svg/dog.svg" alt=""></td>
-                        <td>Thornton</td>
+                        <td>Otto</td>
                         <td>
-                            <button type="button" class="btn btn-danger img-fluid"><img
-                                    src="../../resources/img/png/eliminar_img_boton.png" class="tamanio_edicion_botones"
-                                    alt=""></button>
-                            <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal" data-bs-target="#agmarc"><img
-                                    src="../../resources/img/png/editar_boton.png"
-                                    class="tamanio_edicion_botones"></button>
+                            <!-- Botones de acciones (eliminar, editar) -->
+                            <button type="button" class="btn btn-light"><img
+                                    src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
+                            <button type="button" class="btn btn-light" data-bs-toggle="modal"
+                                data-bs-target="#agmarc"><img src="../../resources/img/svg/edit_icon.svg"
+                                    width="35px"></button>
                         </td>
                     </tr>
+                    <!-- Datos de ejemplo en la tabla -->
                     <tr>
                         <td><img class="tamanio_imagen" src="../../resources/img/svg/dog.svg" alt=""></td>
-                        <td>@twitter</td>
+                        <td>Otto</td>
                         <td>
-                            <button type="button" class="btn btn-danger img-fluid"><img
-                                    src="../../resources/img/png/eliminar_img_boton.png" class="tamanio_edicion_botones"
-                                    alt=""></button>
-                            <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal" data-bs-target="#agmarc"><img
-                                    src="../../resources/img/png/editar_boton.png"
-                                    class="tamanio_edicion_botones"></button>
+                            <!-- Botones de acciones (eliminar, editar) -->
+                            <button type="button" class="btn btn-light"><img
+                                    src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
+                            <button type="button" class="btn btn-light" data-bs-toggle="modal"
+                                data-bs-target="#agmarc"><img src="../../resources/img/svg/edit_icon.svg"
+                                    width="35px"></button>
                         </td>
                     </tr>
                 </tbody>
@@ -95,42 +112,55 @@
         </div>
     </main>
 
-
-    <!-- Agregamos el framework de Bootstrap - JS -->
+    <!-- Framework Bootstrap - JS -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Script personalizado -->
     <script src="../../controllers/utils/admin.js"></script>
 </body>
 
-<!--Modal para el boton de agregar cupon-->
+<!-- Modal para agregar marca -->
 <div class="modal fade" id="agmarc" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header bg-orange-color">
                 <div class="container text-center">
+                    <!-- Título del modal -->
                     <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Agregar marca</h1>
                 </div>
+                <!-- Botón para cerrar el modal -->
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
                     aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-                <div class="col">
-                    <div class="container d-flex align-items-center justify-content-center">
-                        <img src="../../resources/img/png/fondo_img.png" class="img-fluid" stalt="">
+            <form action="" id="crear_marca">
+                <div class="modal-body">
+                    <!-- Sección para cargar imagen y agregar marca -->
+                    <div class="col">
+                        <div class="container d-flex align-items-center justify-content-center">
+                            <img src="../../resources/img/png/fondo_img.png" class="img-fluid" alt="">
+                        </div>
+                        <br>
+                        <div class="container text-center">
+                            <!-- Botón para cargar imagen -->
+                            <button type="button" class="btn btn-red-color text-white"> Cargar Imagen</button>
+                        </div>
                     </div>
-                    <br>
-                    <div class="container text-center">
-                        <button type="button" class="btn btn-red-color text-white"> Cargar Imagen</button>
+                    <!-- Sección para ingresar el nombre de la marca -->
+                    <div class="row container d-flex align-items-center">
+                        <div class="col">
+                            <label for="nombre_marca" class="fs-8 btn-orange-color"> Nombre</label>
+                            <input type="text" class="form-control" aria-label="codigo" name="nombreMarca"
+                                id="nombre_marca">
+                            <br>
+                            <div class="container text-center">
+                                <!-- Botón para agregar la marca -->
+                                <button type="button" class="btn btn-orange-color text-white"> Agregar</button>
+                            </div>
+                            <br>
+                        </div>
                     </div>
                 </div>
-                <div class="row container d-flex align-items-center">
-                    <div class="col">
-                        <p class="fs-8 btn-orange-color"> Nombre</p>
-                        <input type="text" class="form-control" aria-label="codigo">
-                        <br>
-            <div class="container text-center">
-                <button type="button" class="btn btn-orange-color text-white"> Agregar</button>
-            </div>
-            <br>
+            </form>
         </div>
     </div>
 </div>
